2007-09-22  David Shaw  <dshaw@jabberwocky.com>

	* parse.c (extract_secrets): We're not going to support v3 keys.

	* restore.c (restore): Properly handle extracting a public key out
	from a large keyring so we can just pass our pubring directly to
	--pubring.

	* packets.h, output.c, output.h, extract.c, parse.c, parse.h,
	extract.h, paperkey.c, restore.c, restore.h, packets.c: Add
	copyright statements (oops).  Thanks to Peter Palfrader.

2007-09-21  David Shaw  <dshaw@jabberwocky.com>

	* configure.ac: Release version 0.5.

$Id$